# ParalleProgramming-labs

lab1/: CMakeLists.txt  main.cpp
lab2/: CMakeLists.txt  main.cpp  run.bat  Графики.xlsx
lab3/: CMakeLists.txt  main.cpp  thread_1.txt  thread_2.txt  Графики.xlsx
lab4/: CMakeLists.txt  blur.h  bmp.h  main.cpp  Графики.xlsx
lab5/: CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  два без синхронизации.txt  два критическая секция.txt  два с мьютексом.txt  один без синхронизации.txt  один критическая секция.txt
lab6/: .gitignore  CMakeLists.txt  task1.cpp  task2.cpp
